2002-06-26  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (skip):  More robust newline handling.
	The old implementation got line numbers off.
	(read(char[],int,int)):  Likewise.

2002-06-18  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (reserve):  Fix logic error.
	(countLines):  Change 2nd parameter from length to limit.

2002-06-02  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (outputLine):  Copy prefix to new buffer, not
	original one.  Fixes bug reported by Mirko.Luedde@Computer.Org.

2002-02-13  Per Bothner  <per@bothner.com>

	* Char.java (toString):  Print char in Java format, e.g. "'\t'".

	* Char.java:  No longer implements Printable.
	Thus no gnu.text no longer depends on gnu.mapping.
	(print):  Remove method.

2002-01-29  Per Bothner  <per@bothner.com>

	* SyntaxException.java (header):  New field.
	(getHeader, setHeader):  New methods.
	(printAll):  First print header, if non-null.

2002-01-23  Per Bothner  <per@bothner.com>

	* Lexer.java (interactive):  New field.
	(isInteractive, setInteractive):  New methods.

	* Lexer.java (eofError):  New method.

2001-12-24  Per Bothner  <per@bothner.com>

	* IntegerFormat.java:  Remove dependencies on gnu.math.
	Move them to new class gnu.kawa.functions.IntegerFormat.
	(base, minWidth, padChar, commaChar, commaInterval, flags): Now public.
	(plainDecimalFormat, getInstance):  Move to new class.
	(asInteger):  Remove method.
	(convertToIntegerString):  New method.

2001-11-12  Per Bothner  <per@bothner.com>

	* Lexer.java (unread):  Only unread if character is not eof.

2001-10-02  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (isPrettyPrinting):  Set in constructors only.

2001-08-23  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (setIndentation):  Fix handling of 'prefix' local
	cache for 'prefix' field.
	Fixes bug reported by Felix S Klock II <pnkfelix@MIT.EDU>.

2001-08-16  Per Bothner  <per@bothner.com>

	* SourceMessages.java (printAll):  Make public.
