@@ -1,3 +1,9 @@
+2002-07-21  Per Bothner  <per@bothner.com>
+
+	* SourceMessages.java (getFile, getLine, getColumn, setFile, setLine,
+	setLine, error):  New messages.
+	(current_filename, current_line, current_column):  New fields.
+
 2002-06-26  Per Bothner  <per@bothner.com>
 
 	* LineBufferedReader.java (skip):  More robust newline handling.
